# PointCloud

./: CMakeLists.txt  README.md
data/: filter1.pcd
src/: cloudVisualization.cpp  filterPointCloud.cpp  loadPointCloud.cpp  passthrough.cpp  writePCD.cpp
